<resources>
    <string name="app_name">Speed Tester</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_app_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_app_interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <!-- <string name = "admob_app_native">ca-app-pub-1754326763906656/9229982323</string>
-->
    <string name="more_from_us">Developer URL</string>
    // Developer url

    <string name="ratetext">We resolved problem(s) successfully.</string>
    <string name="rate_text1">Is that worth a good rating?</string>

    <string name="settings">Settings</string>
    <string name="speed">Speed</string>
    <string name="history">History</string>

    <string name="date_format">MM/dd/yyyy HH:mm</string>
    <string name="speedtest">Speed Test</string>
    <string name="value">-</string>
    <string name="upload">UPLOAD</string>
    <string name="download">DOWNLOAD</string>
    <string name="date">Unit</string>
    <string name="mbps">values</string>
    <string name="values">Mbps</string>
    <string name="scale">Scale</string>
    <string name="_100">100</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="share">Share</string>
    <string name="units">MBS</string>
    <string name="connection_name">Connection Name</string>
    <string name="warning">Exit App</string>
    <string name="description_dialogue">Are You Sure You Want to Exit</string>
    <string name="yes">Yes</string>
    <string name="no">Cancel</string>
    <string name="are_you_sure_you_want_to_exit">Are you Sure You Want to Exit</string>


</resources>
