<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <FrameLayout
        android:id="@+id/v_ad_unified"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_data_rate_units">

        </FrameLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_data_rate_units"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:backgroundTint="@color/black"
        app:cardCornerRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_ad_unified">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_data_rate_units"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp">

            <TextView
                android:id="@+id/tv_data_rate_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fugaz_one"
                android:padding="8dp"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_setting_unit_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fugaz_one"
                android:padding="8dp"
                android:text="@string/values"
                android:textColor="#828282"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_data_rate_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#333333"
        app:layout_constraintTop_toBottomOf="@+id/cv_data_rate_units"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_scale"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:backgroundTint="@color/black"
        app:cardCornerRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_data_rate_units">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_scale"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp">

            <TextView
                android:id="@+id/tv_setting_scale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fugaz_one"
                android:padding="8dp"
                android:text="@string/scale"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_setting_scale_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fugaz_one"
                android:padding="8dp"
                android:text="@string/_100"
                android:textColor="#828282"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tv_setting_scale" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#333333"
        app:layout_constraintTop_toBottomOf="@+id/cv_scale"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_language"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:backgroundTint="@color/black"
        app:cardCornerRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_scale">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_language"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp">

            <TextView
                android:id="@+id/tv_setting_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fugaz_one"
                android:padding="8dp"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_setting_language_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fugaz_one"
                android:padding="8dp"
                android:text="@string/english"
                android:textColor="#828282"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tv_setting_language" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#333333"
        app:layout_constraintTop_toBottomOf="@+id/cv_language"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_share"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:backgroundTint="@color/black"
        app:cardCornerRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_language">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_share"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp">

            <TextView
                android:id="@+id/tv_setting_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fugaz_one"
                android:padding="8dp"
                android:text="@string/share"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/tv_share_us_sub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fugaz_one"
                android:padding="8dp"
                android:text="if you like our app please share"
                android:textColor="@color/textColor2"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_setting_share" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#333333"
        app:layout_constraintTop_toBottomOf="@+id/cv_share"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_rate_us"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:backgroundTint="@color/black"
        app:cardCornerRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_share">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_rate_us"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp">

            <TextView
                android:id="@+id/tv_rate_us_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fugaz_one"
                android:text="Rate Us"
                android:padding="8dp"
                android:textColor="@color/darktext_color"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/tv_rate_us_sub"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_rate_us_sub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fugaz_one"
                android:text="if you like our app please give us 5 stars"
                android:textColor="@color/textColor2"
                android:padding="8dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_rate_us_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#333333"
        app:layout_constraintTop_toBottomOf="@+id/cv_rate_us"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:backgroundTint="@color/black"
        app:cardCornerRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_rate_us">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp">

            <TextView
                android:id="@+id/tv_privacy_policy_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fugaz_one"
                android:text="Privacy Policy"
                android:textColor="@color/darktext_color"
                android:textSize="14sp"
                android:padding="8dp"
                app:layout_constraintBottom_toTopOf="@id/tv_privacy_policy_sub"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_privacy_policy_sub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:fontFamily="@font/fugaz_one"
                android:text=""
                android:textColor="@color/textColor2"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_privacy_policy_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>
